# llm-zoomcamp

./: .gitignore  agents.ipynb  homework.ipynb  notebook.ipynb  pyproject.toml  rag_helper.py
llm-zoomcamp-hw5/: pyproject.toml  starter.py
llm-zoomcamp-onnx/: embedder.py  homework.ipynb  pyproject.toml
module1/: rag.ipynb  rag_helper.py
module2/: pgvector.ipynb  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_rag.ipynb
module3/03-orchestration/: docker-compose.yml
module4/: agent_eval.ipynb  data_gen.ipynb  evaluation_utils.py  homework.ipynb  pyproject.toml  rag_eval.ipynb  rag_metrics.ipynb  search_eval.ipynb  search_metrics.ipynb
module4/data/: ground_truth-new.csv  rag-answers-new.csv
module5/: Makefile  app.py  assistant.py  dashboard.py  db_feedback.py  db_init.py  db_query.py  db_save.py  main.py  metrics.py  pyproject.toml
workshop/: main.py  pyproject.toml
