[project]
name = "workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb]>=1.29.0",
    "logfire>=3.9.0",
    "minsearch>=0.1.1",
    "openai>=2.44.0",
    "pydantic-ai>=0.8.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
